--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/metrics_publish_java"/>
 	<classpathentry kind="lib" path="lib/config-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/metrics_publish-1.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
