--- a/build.xml
+++ b/build.xml
@@ -1,74 +1,89 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!-- WARNING: Eclipse auto-generated file.
-              Any modifications will be overwritten.
-              To include a user specific buildfile here, simply create one in the same
-              directory with the processing instruction <?eclipse.ant.import?>
-              as the first entry and export the buildfile again. -->
-<project basedir="." default="build" name="newrelic_unix_plugin">
-    <property environment="env"/>
-    <property name="ECLIPSE_HOME" value="/Applications/eclipse"/>
-    <property name="metrics_publish_java.location" value="../metrics_publish_java"/>
-    <property name="debuglevel" value="source,lines,vars"/>
-    <property name="target" value="1.5"/>
-    <property name="source" value="1.5"/>
-    <path id="metrics_publish_java.classpath">
-        <pathelement location="${metrics_publish_java.location}/bin"/>
-        <pathelement location="${metrics_publish_java.location}/test/lib/hamcrest-core-1.3.jar"/>
-        <pathelement location="${metrics_publish_java.location}/test/lib/junit-4.11.jar"/>
-        <pathelement location="${metrics_publish_java.location}/test/lib/easymock-3.2.jar"/>
-        <pathelement location="${metrics_publish_java.location}/test/lib/objenesis-1.3.jar"/>
-        <pathelement location="${metrics_publish_java.location}/test/lib/cglib-nodep-2.2.3.jar"/>
-        <pathelement location="${metrics_publish_java.location}/lib/json-simple-1.1.1.jar"/>
+<project basedir="." default="dist" name="newrelic_unix_plugin">
+	<property name="pluginname" value="newrelic_unix_plugin"/>
+	<property name="pluginname.long" value="New Relic Unix Plugin"/>
+    <property name="version" value="3.0.0"/>
+    <property name="filename" value="${pluginname}"/>
+    <property name="jarfile" value="${pluginname}.jar"/>
+    <property name="tarfile" value="${filename}.tar.gz"/>
+
+    <property name="build.dir" location="bin"/>
+    <property name="build.classes.dir" value="${build.dir}/classes"/>
+    <property name="build.jar.dir" value="${build.dir}/jar"/>
+    <property name="build.tar.dir" value="${build.dir}/tar"/>
+    <property name="build.tar.src.dir" value="${build.tar.dir}/${pluginname}"/>
+
+    <property name="dist.dir" location="dist"/>
+    <property name="src.dir" location="src"/>
+    <property name="lib.dir" location="lib"/>
+    <property name="conf.dir" location="config"/>
+    <property name="script.dir" location="."/>
+    <property name="newrelic.lib" value="${lib.dir}/metrics_publish-2.0.1.jar"/>
+    <property name="json.lib" value="${lib.dir}/json-simple-1.1.1.jar"/>
+
+    <path id="classpath">
+        <pathelement location="${build.dir}"/>
+        <pathelement location="${newrelic.lib}"/>
+        <pathelement location="${json.lib}"/>
     </path>
-    <path id="newrelic_unix_plugin.classpath">
-        <pathelement location="bin"/>
-        <path refid="metrics_publish_java.classpath"/>
-        <pathelement location="lib/config-1.0.1.jar"/>
-        <pathelement location="lib/json-simple-1.1.1.jar"/>
-        <pathelement location="lib/metrics_publish-2.0.0.jar"/>
-    </path>
-    <target name="init">
-        <mkdir dir="bin"/>
-        <copy includeemptydirs="false" todir="bin">
-            <fileset dir="src">
-                <exclude name="**/*.launch"/>
-                <exclude name="**/*.java"/>
-            </fileset>
-        </copy>
-    </target>
+	
     <target name="clean">
-        <delete dir="bin"/>
+        <echo>Cleaning project.</echo>
+        <delete dir="${build.dir}"/>
+        <echo>Done.</echo>
     </target>
-    <target depends="clean" name="cleanall">
-        <ant antfile="build.xml" dir="${metrics_publish_java.location}" inheritAll="false" target="clean"/>
+    
+    <target depends="clean" name="cleanall"/>
+
+    <target name="init" depends="clean">
+        <echo>Creating directory: ${build.dir}</echo>
+        <mkdir dir="${build.dir}"/>
     </target>
-    <target depends="build-project" name="build"/>
-    <target name="build-subprojects">
-        <ant antfile="build.xml" dir="${metrics_publish_java.location}" inheritAll="false" target="build-project">
-            <propertyset>
-                <propertyref name="build.compiler"/>
-            </propertyset>
-        </ant>
-    </target>
-    <target depends="init" name="build-project">
-        <echo message="${ant.project.name}: ${ant.file}"/>
-        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
-            <src path="src"/>
-            <classpath refid="newrelic_unix_plugin.classpath"/>
+
+    <target name="compile" depends="init">
+        <echo>Building project.</echo>
+        <mkdir dir="${build.classes.dir}"/>
+        <javac srcdir="${src.dir}" destdir="${build.classes.dir}" target="1.6" source="1.6">
+            <classpath refid="classpath"/>
         </javac>
+        <echo>Done.</echo>
     </target>
-    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
-    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
-        <copy todir="${ant.library.dir}">
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+
+    <target name="jar" depends="compile" description="create a Jar file for the plugin">
+        <mkdir dir="${build.jar.dir}"/>
+        <tstamp/>
+        <jar destfile="${build.jar.dir}/${jarfile}">
+            <manifest>
+            	<attribute name="Manifest-Version" value="1.0"/>
+                <attribute name="Specification-Title" value="${pluginname.long}"/>
+                <attribute name="Specification-Vendor" value="The Chocolate Factory"/>
+                <attribute name="Implementation-Vendor" value="The Chocolate Factory"/>
+                <attribute name="Built-Date" value="${TODAY}"/>
+                <attribute name="Specification-Version" value="${version}"/>
+                <attribute name="Implementation-Version" value="${version} ${TODAY}"/>
+                <attribute name="Main-Class" value="com.chocolatefactory.newrelic.plugins.unix.Main"/>
+            </manifest>
+            <fileset dir="${build.classes.dir}"/>
+       </jar>
+    </target>
+
+    <target name="dist" depends="jar" description="create a downloadable file">
+        <mkdir dir="${build.tar.src.dir}"/>
+    	<mkdir dir="${build.tar.src.dir}/bin"/>
+    	<mkdir dir="${build.tar.src.dir}/config"/>
+        <mkdir dir="${build.tar.src.dir}/lib"/>
+        <copy file="LICENSE" todir="${build.tar.src.dir}" />
+        <copy file="README.md" todir="${build.tar.src.dir}" />
+        <copy file="pluginctl.sh" todir="${build.tar.src.dir}" />
+        <copy todir="${build.tar.src.dir}/config">
+            <fileset dir="${conf.dir}" />
         </copy>
-        <unzip dest="${ant.library.dir}">
-            <patternset includes="jdtCompilerAdapter.jar"/>
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </unzip>
-    </target>
-    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
-        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
-        <antcall target="build"/>
-    </target>
+        <copy todir="${build.tar.src.dir}/lib">
+            <fileset dir="${lib.dir}" />
+        </copy>
+        <copy file="${build.jar.dir}/${jarfile}" todir="${build.tar.src.dir}/bin" />
+        <tar compression="gzip" destfile="${dist.dir}/${tarfile}">
+            <tarfileset dir="${build.tar.dir}" />
+        </tar>
+     </target>
 </project>
