--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project basedir="." default="dist" name="newrelic_unix_plugin">
     <!-- UPDATE VERSION NUMBER HERE, NOT DIRECTLY IN SRC! -->
-	<property name="version" value="3.1.3"/>
+	<property name="version" value="3.2"/>
 	
 	<property name="unixagent.file" value="com/chocolatefactory/newrelic/plugins/unix/UnixAgent.java"/>
 	<property name="pluginname" value="newrelic_unix_plugin"/>
@@ -51,7 +51,7 @@
     	/>
     	<echo>Building project.</echo>
         <mkdir dir="${build.classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${build.classes.dir}" target="1.6" source="1.6">
+        <javac srcdir="${src.dir}" destdir="${build.classes.dir}" target="1.6" source="1.6" includeantruntime="false">
             <classpath refid="classpath"/>
         </javac>
         <echo>Done.</echo>
