First fully-packaged version!

--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,10 @@
 /.settings/*
 *.class
 *.log
-dist/newrelic_unix_plugin/**
-
+dist/**
 **/.DS_Store
-
-config/newrelic.json
-
-config/plugin.json
-
 logs/**
-
 scratchpad.txt
+
+target/**
+!target/*.tar.gz
